--- a/data/repositories.toml
+++ b/data/repositories.toml
@@ -800,5 +800,6 @@ repositories = [
   'github.com/zulip/zulip',
   'github.com/ZupIT/charlescd',
   'github.com/ZupIT/ritchie-cli',
-  'github.com/ZupIT/ritchie-formulas'
+  'github.com/ZupIT/ritchie-formulas',
+  'github.com/osmanabdulkadir'
  ]
